begin van hamburgeropdracht

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Dit wordt een menu animatie</title>
+    <title>Dit is een vette demo </title>
 </head>
 <body>
 
-    <div id="menu"></div>
+<!--<div id="menu"></div>-->
+
+    <h1>Dit is een vette demo</h1>
 
 </body>
 </html>
